# RPSLS

./: .gitignore  .graphifyignore  ARENA-RETHINK.md  CARTES-AUDIT.md  Cargo.toml  GAMEPLAY-POLISH-HANDOFF.md  HANDOFF.md  PROMPTS-CARTES-GENERALES.md  PROMPTS-CARTES-VOIES.md  PROMPTS_CARTES_FUSION.md  REFACTOR-CHAIN.md  ROADMAP.md  SUITE.md  VOIE-ARCHETYPES.md  VOIES-GUIDE.md  render.yaml
.github/workflows/: keepalive.yml  landing.yml
app/: .env.example  balance.html  index.html  package.json  pnpm-lock.yaml  vite.config.ts
app/src/: AboutPage.tsx  (+44 more)
app/src-tauri/: Cargo.toml  tauri.conf.json
crates/rpsls-server/: .dockerignore  Cargo.toml  Dockerfile  cards_meta.json  economy_meta.json  fly.toml
crates/rpsls-server/src/: account.rs  auth.rs  dispatch.rs  economy.rs  google_auth.rs  hello.rs  janitors.rs  lanes_engine.rs  leaderboard.rs  lobby.rs  main.rs  match_engine.rs  player_state.rs  protocol.rs  security.rs  session.rs
crates/rpsls-server/src/account/: bonus.rs  handlers.rs  hashing.rs  mod.rs  store.rs  validation.rs
crates/rpsls-server/src/lanes_engine/: mod.rs  phases.rs
crates/rpsls-server/src/player_state/: mod.rs  redis.rs
docs/: ARCHITECTURE_REVIEW.md  ARENA_UX_AUDIT.md  AUDIT_FINAL.md  AUDIT_MODE_CONSTELLATION.md  AUDIT_MODE_ONLINE.md  AUDIT_MODE_RANKED.md  BUG_DOUBLE_STREAK_XP.md  CARD_DESIGN_PROPOSAL.md  CARTES_BONUS_V3.md  CCG_EXPERT_REDESIGN.md  CHAT_SYSTEM.md  CONSTELLATION_PRO_AUDIT.md  CONSTELLATION_PRO_BUILD_PLAN.md  CONSTELLATION_PRO_DESIGN.md  CONSTELLATION_PRO_ROADMAP.md  CONSTELLATION_PRO_V2_PLAN.md  ERROR_GUARD_AUDIT.md  FUSIONS_DESIGN.md  GAME_MODE_INNOVATIONS.md  GAME_MODE_REDESIGN.md  HANDOFF-NEXT-AGENT.md  HANDOFF.md  HANDOFF_COMPLET.md  HANDOFF_CONSTELLATION_PRO.md  HANDOFF_COSMETICS.md  HANDOFF_NEXT_AGENT.md  HANDOFF_PREMIUM_STYLE.md  NOUVELLES_CARTES_PRO.md  ORPHAN_FILES_AUDIT.md  PLAY_AUTH_AND_IAP.md  PREMIUM_THEMES.md  PROMPTS_ICONES_MENUS_ATOUTS.md  PROMPTS_ICONES_PRO.md  PROMPTS_IMAGES_FINISHERS.md  SCEAUX_DOUBLES.md  TITRES_RECOMPENSES_EXHAUSTIF.md  TUTORIAL_PLAN.md
keystore/: keystore.properties.example
landing/: README.md  index.html  privacy.html
loadtest/: loadtest.mjs  package.json  rematch-live-probe.mjs  rematch-test.mjs
scripts/: gen-card-meta.mjs  gen-economy-meta.mjs  i18n-fill.mjs  package.json  rpsls-devconsole.ps1  smoke-test-lanes.mjs  smoke-test-ws.mjs  strip-logo-checker.py  verify-deploy.mjs
(+423 files in other folders)
